--- a/examples/first-docker-file/Dockerfile
+++ b/examples/first-docker-file/Dockerfile
@@ -1,16 +1,12 @@
-FROM ubuntu:latest
+FROM python:3.11-slim
 
-# Set the working directory in the image
 WORKDIR /app
 
-# Copy the files from the host file system to the image file system
-COPY . /app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Install the necessary packages
-RUN apt-get update && apt-get install -y python3 python3-pip
+COPY . .
 
-# Set environment variables
-ENV NAME World
+EXPOSE 5000
 
-# Run a command to start the application
-CMD ["python3", "app.py"]
+CMD ["python", "app.py"]
