Add comment for Distroless image
Add comment for Distroless image in Dockerfile

--- a/examples/golang-multi-stage-docker-build/Dockerfile
+++ b/examples/golang-multi-stage-docker-build/Dockerfile
@@ -15,6 +15,7 @@ RUN CGO_ENABLED=0 go build -o /app .
 ############################################
 # HERE STARTS THE MAGIC OF MULTI STAGE BUILD
 ############################################
+######Distrloess Image ######
 
 FROM scratch
 
