--- a/examples/python-web-app/Dockerfile
+++ b/examples/python-web-app/Dockerfile
@@ -2,20 +2,14 @@ FROM ubuntu
 
 WORKDIR /app
 
-COPY requirements.txt /app/
-COPY devops /app/
+# Copy project files
+COPY requirements.txt /app
+COPY devops /app
 
-RUN apt-get update && apt-get install -y python3 python3-pip python3-venv
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip && \
+    pip install -r requirements.txt && \
+    cd devops
 
-SHELL ["/bin/bash", "-c"]
-
-RUN python3 -m venv venv1 && \
-source venv1/bin/activate && \
-pip install --no-cache-dir -r requirements.txt
-
-EXPOSE 8000
-
-CMD source venv1/bin/activate && python3 manage.py runserver 0.0.0.0:8000
-
-
-
+# Run Django server
+ENTRYPOINT ["manage.py", "runserver", "0.0.0.0:8000"]
